--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,3 @@
-{{page-title "TeamsNode"}}
-
-{{! The following component displays Ember's default welcome message. }}
-<WelcomePage />
-{{! Feel free to remove this! }}
-
-{{outlet}}
+<div class="messages">
+    <MeetingList />
+</div>
